// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input variant "bottom-lined" renders 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c2 {
  height: 3.5rem;
  padding: 1.625rem 0.25rem 0.625rem;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    type="text"
  />
</div>
`;

exports[`Input variant "bottom-lined" renders the error state 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c2 {
  height: 3.5rem;
  padding: 1.625rem 0.25rem 0.625rem;
  box-shadow: inset 0 -0.0625rem 0 0 #FF5E05;
  border-color: #FF5E05;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    type="text"
  />
</div>
`;

exports[`Input variant "bottom-lined" renders the error state with label and placeholder 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c4 {
  position: absolute;
  pointer-events: none;
  background-color: transparent;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: calc(100% - 2rem);
  -webkit-transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
  transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
}

.c5 {
  left: 0;
  top: 1.375rem;
  padding: 0 0.25rem;
  font-size: 1rem;
}

.c2 {
  height: 3.5rem;
  padding: 1.625rem 0.25rem 0.625rem;
  box-shadow: inset 0 -0.0625rem 0 0 #FF5E05;
  border-color: #FF5E05;
}

.c2 ~ .c3 {
  font-weight: 600;
  top: 0.25rem;
  font-size: 0.75rem;
  color: #9CA7B4;
  background: #FFFFFF;
}

.c2 ~ .c3 {
  color: #FF5E05;
}

.c2:disabled ~ .c3 {
  color: #C6CDD4;
}

.c2:-webkit-autofill + .c3,
.c2:-webkit-autofill:hover + .c3,
.c2:-webkit-autofill:focus + .c3,
.c2:-webkit-autofill:active + .c3 {
  font-weight: 600;
  top: 0.25rem;
  font-size: 0.75rem;
}

.c2:focus:not(:disabled) ~ .c3 {
  font-weight: 600;
  top: 0.25rem;
  font-size: 0.75rem;
  color: #096BDB;
  background: #FFFFFF;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    placeholder="FREE NOW"
    type="text"
  />
  <label
    class="c3 c4 c5"
    for="random"
  >
    Name
  </label>
</div>
`;

exports[`Input variant "bottom-lined" renders the inverted style 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: transparent;
  border-radius: 0;
  color: #FFFFFF;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1::-moz-placeholder {
  color: #C6CDD4;
}

.c1:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1::placeholder {
  color: #C6CDD4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1:disabled {
  color: #637689;
  border-color: #637689;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #637689;
}

.c1:disabled::-moz-placeholder {
  color: #637689;
}

.c1:disabled:-ms-input-placeholder {
  color: #637689;
}

.c1:disabled::placeholder {
  color: #637689;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #FFFFFF;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c2 {
  height: 3.5rem;
  padding: 1.625rem 0.25rem 0.625rem;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    type="text"
  />
</div>
`;

exports[`Input variant "bottom-lined" renders the label 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c4 {
  position: absolute;
  pointer-events: none;
  background-color: transparent;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: calc(100% - 2rem);
  -webkit-transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
  transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
}

.c5 {
  left: 0;
  top: 1.375rem;
  padding: 0 0.25rem;
  font-size: 1rem;
}

.c2 {
  height: 3.5rem;
  padding: 1.625rem 0.25rem 0.625rem;
}

.c2 ~ .c3 {
  color: #9CA7B4;
  background: #FFFFFF;
}

.c2:disabled ~ .c3 {
  color: #C6CDD4;
}

.c2:-webkit-autofill + .c3,
.c2:-webkit-autofill:hover + .c3,
.c2:-webkit-autofill:focus + .c3,
.c2:-webkit-autofill:active + .c3 {
  font-weight: 600;
  top: 0.25rem;
  font-size: 0.75rem;
}

.c2:focus:not(:disabled) ~ .c3 {
  font-weight: 600;
  top: 0.25rem;
  font-size: 0.75rem;
  color: #096BDB;
  background: #FFFFFF;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    type="text"
  />
  <label
    class="c3 c4 c5"
    for="random"
  >
    Name
  </label>
</div>
`;

exports[`Input variant "bottom-lined" renders the label and the placeholder 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c4 {
  position: absolute;
  pointer-events: none;
  background-color: transparent;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: calc(100% - 2rem);
  -webkit-transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
  transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
}

.c5 {
  left: 0;
  top: 1.375rem;
  padding: 0 0.25rem;
  font-size: 1rem;
}

.c2 {
  height: 3.5rem;
  padding: 1.625rem 0.25rem 0.625rem;
}

.c2 ~ .c3 {
  font-weight: 600;
  top: 0.25rem;
  font-size: 0.75rem;
  color: #9CA7B4;
  background: #FFFFFF;
}

.c2:disabled ~ .c3 {
  color: #C6CDD4;
}

.c2:-webkit-autofill + .c3,
.c2:-webkit-autofill:hover + .c3,
.c2:-webkit-autofill:focus + .c3,
.c2:-webkit-autofill:active + .c3 {
  font-weight: 600;
  top: 0.25rem;
  font-size: 0.75rem;
}

.c2:focus:not(:disabled) ~ .c3 {
  font-weight: 600;
  top: 0.25rem;
  font-size: 0.75rem;
  color: #096BDB;
  background: #FFFFFF;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    placeholder="FREE NOW"
    type="text"
  />
  <label
    class="c3 c4 c5"
    for="random"
  >
    Name
  </label>
</div>
`;

exports[`Input variant "bottom-lined" renders the small size 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border: none;
  border-top-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  border-bottom: 0.0625rem solid #C6CDD4;
  font-size: 0.875rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 -0.0625rem 0 0 #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c2 {
  height: 2.5rem;
  padding: 1rem 0.125rem 0.375rem;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    type="text"
  />
</div>
`;

exports[`Input variant "boxed" renders 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c2 {
  height: 3rem;
  padding: 0 0.75rem;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    type="text"
  />
</div>
`;

exports[`Input variant "boxed" renders the error state 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c2 {
  height: 3rem;
  padding: 0 0.75rem;
  box-shadow: inset 0 0 0 0.0625rem #FF5E05;
  border-color: #FF5E05;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    type="text"
  />
</div>
`;

exports[`Input variant "boxed" renders the error state with label and placeholder 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c4 {
  position: absolute;
  pointer-events: none;
  background-color: transparent;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: calc(100% - 2rem);
  -webkit-transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
  transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
}

.c5 {
  top: 0.75rem;
  left: 0.5rem;
  padding: 0 0.25rem;
  font-size: 1rem;
}

.c2 {
  height: 3rem;
  padding: 0 0.75rem;
  box-shadow: inset 0 0 0 0.0625rem #FF5E05;
  border-color: #FF5E05;
}

.c2 + .c3 {
  font-weight: 600;
  top: -0.5rem;
  font-size: 0.75rem;
  color: #9CA7B4;
  background: #FFFFFF;
  background: linear-gradient(0deg,#FFFFFF calc(50% + 0.0625rem),transparent 50%);
}

.c2 ~ .c3 {
  color: #FF5E05;
}

.c2:disabled + .c3 {
  color: #C6CDD4;
}

.c2:-webkit-autofill + .c3,
.c2:-webkit-autofill:hover + .c3,
.c2:-webkit-autofill:focus + .c3,
.c2:-webkit-autofill:active + .c3 {
  font-weight: 600;
  top: -0.5rem;
  font-size: 0.75rem;
}

.c2:focus:not(:disabled) + .c3 {
  font-weight: 600;
  top: -0.5rem;
  font-size: 0.75rem;
  color: #096BDB;
  background: #FFFFFF;
  background: linear-gradient(0deg,#FFFFFF calc(50% + 0.0625rem),transparent 50%);
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    placeholder="FREE NOW"
    type="text"
  />
  <label
    class="c3 c4 c5"
    for="random"
  >
    Name
  </label>
</div>
`;

exports[`Input variant "boxed" renders the inverted style 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: transparent;
  border-radius: 0;
  color: #FFFFFF;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1::-moz-placeholder {
  color: #C6CDD4;
}

.c1:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1::placeholder {
  color: #C6CDD4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1:disabled {
  color: #637689;
  border-color: #637689;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #637689;
}

.c1:disabled::-moz-placeholder {
  color: #637689;
}

.c1:disabled:-ms-input-placeholder {
  color: #637689;
}

.c1:disabled::placeholder {
  color: #637689;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #FFFFFF;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c2 {
  height: 3rem;
  padding: 0 0.75rem;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    type="text"
  />
</div>
`;

exports[`Input variant "boxed" renders the label 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c4 {
  position: absolute;
  pointer-events: none;
  background-color: transparent;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: calc(100% - 2rem);
  -webkit-transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
  transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
}

.c5 {
  top: 0.75rem;
  left: 0.5rem;
  padding: 0 0.25rem;
  font-size: 1rem;
}

.c2 {
  height: 3rem;
  padding: 0 0.75rem;
}

.c2 + .c3 {
  color: #9CA7B4;
  background: #FFFFFF;
  background: linear-gradient(0deg,#FFFFFF calc(50% + 0.0625rem),transparent 50%);
}

.c2:disabled + .c3 {
  color: #C6CDD4;
}

.c2:-webkit-autofill + .c3,
.c2:-webkit-autofill:hover + .c3,
.c2:-webkit-autofill:focus + .c3,
.c2:-webkit-autofill:active + .c3 {
  font-weight: 600;
  top: -0.5rem;
  font-size: 0.75rem;
}

.c2:focus:not(:disabled) + .c3 {
  font-weight: 600;
  top: -0.5rem;
  font-size: 0.75rem;
  color: #096BDB;
  background: #FFFFFF;
  background: linear-gradient(0deg,#FFFFFF calc(50% + 0.0625rem),transparent 50%);
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    type="text"
  />
  <label
    class="c3 c4 c5"
    for="random"
  >
    Name
  </label>
</div>
`;

exports[`Input variant "boxed" renders the label and the placeholder 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 1rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c4 {
  position: absolute;
  pointer-events: none;
  background-color: transparent;
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: calc(100% - 2rem);
  -webkit-transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
  transition: top 100ms ease-out,left 100ms ease-out, padding 100ms ease-out,font-size 100ms ease-out, color 100ms ease-out,background 100ms ease-out;
}

.c5 {
  top: 0.75rem;
  left: 0.5rem;
  padding: 0 0.25rem;
  font-size: 1rem;
}

.c2 {
  height: 3rem;
  padding: 0 0.75rem;
}

.c2 + .c3 {
  font-weight: 600;
  top: -0.5rem;
  font-size: 0.75rem;
  color: #9CA7B4;
  background: #FFFFFF;
  background: linear-gradient(0deg,#FFFFFF calc(50% + 0.0625rem),transparent 50%);
}

.c2:disabled + .c3 {
  color: #C6CDD4;
}

.c2:-webkit-autofill + .c3,
.c2:-webkit-autofill:hover + .c3,
.c2:-webkit-autofill:focus + .c3,
.c2:-webkit-autofill:active + .c3 {
  font-weight: 600;
  top: -0.5rem;
  font-size: 0.75rem;
}

.c2:focus:not(:disabled) + .c3 {
  font-weight: 600;
  top: -0.5rem;
  font-size: 0.75rem;
  color: #096BDB;
  background: #FFFFFF;
  background: linear-gradient(0deg,#FFFFFF calc(50% + 0.0625rem),transparent 50%);
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    placeholder="FREE NOW"
    type="text"
  />
  <label
    class="c3 c4 c5"
    for="random"
  >
    Name
  </label>
</div>
`;

exports[`Input variant "boxed" renders the small size 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  background: #FFFFFF;
  border-radius: 0;
  color: #001E3E;
  font-size: 1rem;
  font-family: "Open Sans",sans-serif;
  -webkit-transition: box-shadow 100ms,border 100ms;
  transition: box-shadow 100ms,border 100ms;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  border-radius: 0.25rem;
  border: 0.0625rem solid #C6CDD4;
  font-size: 0.875rem;
}

.c1::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c1::-moz-placeholder {
  color: #9CA7B4;
}

.c1:-ms-input-placeholder {
  color: #9CA7B4;
}

.c1::placeholder {
  color: #9CA7B4;
}

.c1:active,
.c1:focus {
  border-color: #096BDB;
  box-shadow: inset 0 0 0 0.0625rem #096BDB;
}

.c1:disabled {
  color: #C6CDD4;
  border-color: #C6CDD4;
  box-shadow: none;
  cursor: not-allowed;
}

.c1:disabled::-webkit-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::-moz-placeholder {
  color: #C6CDD4;
}

.c1:disabled:-ms-input-placeholder {
  color: #C6CDD4;
}

.c1:disabled::placeholder {
  color: #C6CDD4;
}

.c1:-webkit-autofill,
.c1:-webkit-autofill:hover,
.c1:-webkit-autofill:focus,
.c1:-webkit-autofill:active {
  -webkit-text-fill-color: #001E3E;
  -webkit-transition: background-color 99999999ms ease 99999999ms;
  transition: background-color 99999999ms ease 99999999ms;
}

.c2 {
  height: 2rem;
  padding: 0 0.5rem;
}

.c0 {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    id="random"
    type="text"
  />
</div>
`;
